--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: D3mirt
-Title: What the Package Does (One Line, Title Case)
+Title: Descriptive 3D Multidimensional Item Response Theory
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Erik", "Forsberg", , "e_forsberg@psychology.su.se", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-5228-9729"))
+Description: Estimation and plotting of 3D dmirt objects.
+License: use_mit_license()
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/ForsbergPyschometrics/D3mirt
 BugReports: https://github.com/ForsbergPyschometrics/D3mirt/issues
+Imports: 
+    rgl
