--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Erik", "Forsberg", , "e_forsberg@psychology.su.se", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5228-9729"))
 Description: Estimation and plotting of 3D dmirt objects.
-License: use_mit_license()
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
