--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,13 @@ Authors@R:
            comment = c(ORCID = "0000-0002-5228-9729"))
 Description: Estimation and plotting of 3D dmirt objects.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
 URL: https://github.com/ForsbergPyschometrics/D3mirt
 BugReports: https://github.com/ForsbergPyschometrics/D3mirt/issues
 Imports: 
-    rgl
+    rgl (>= 1.0.1)
+Suggests: 
+    mirt,
+    stats
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
