--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,9 @@ Package: D3mirt
 Title: Descriptive 3D Multidimensional Item Response Theory
 Version: 0.0.0.9000
 Authors@R: 
-    person("Erik", "Forsberg", , "e_forsberg@psychology.su.se", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-5228-9729"))
+    c(person("Erik", "Forsberg", , email= "e_forsberg@psychology.su.se", role = c("aut", "cre", "cph"),
+           comment = c(ORCID = "0000-0002-5228-9729")),
+    person("Anders", "Sjöberg", , email = "anders.sjoberg@psychology.su.se", role = c("ths", "ctb")))
 Description: Estimation and plotting of 3D dmirt objects.
 License: MIT + file LICENSE
 URL: https://github.com/ForsbergPyschometrics/D3mirt
