--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,6 @@ export(D3mirt)
 export(modid)
 export(plotD3mirt)
 import(rgl)
+importFrom(mirt,fscores)
+importFrom(mirt,mirt)
 importFrom(stats,cov)
