--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: D3mirt
-Title: Descriptive 3D Multidimensional Item Response Theory
+Title: Descriptive 3D Multidimensional Item Response Theory Modeling
 Version: 1.0.1
 Authors@R: 
     c(person("Erik", "Forsberg", , email= "forsbergpsychometrics@gmail.com", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-5228-9729")),
     person("Anders", "Sjöberg", , email = "anders.sjoberg@psychology.su.se", role = c("ths", "ctb")))
-Description: Identification, estimation, and plotting of D3mirt psychometric models.
+Description: The `D3mirt` package is used for identifying, estimating, and plotting descriptive multidimensional item response theory models, restricted to 3D and dichotomous or polytomous data that fit the 2PL or the graded response model.
+ The method is foremost explorative and centered around the plot function that exposes item characteristics and constructs, represented by vector arrows, located in a three-dimensional interactive space.
+ The results can be useful for item-level analysis as well as test development.
 License: GPL (>= 3)
 URL: https://github.com/ForsbergPyschometrics/D3mirt
 BugReports: https://github.com/ForsbergPyschometrics/D3mirt/issues
 Depends:
     mirt,
-    R (>= 3.3.0),
+    R (>= 3.5.0),
     rgl (>= 1.0.1)
 Suggests: 
     knitr,
