--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,8 +4,14 @@
 ^data-raw$
 ^revdep$
 ^README\.Rmd$
-^anesdata.png
-^item.png
+^item1.png
+^item2.png
+^ci1.png
+^ci2.png
+^anes1.png
+^anes2.png
+^p1.png
+^p2.png
 ^profile.png
 ^cran-comments\.md$
 ^CRAN-SUBMISSION$
