Description and citation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: D3mirt
 Title: Descriptive 3D Multidimensional Item Response Theory Modeling
 Version: 1.0.2
 Authors@R: 
-    c(person("Erik", "Forsberg", , email= "forsbergpsychometrics@gmail.com", role = c("aut", "cre", "cph"),
-           comment = c(ORCID = "0000-0002-5228-9729")),
-    person("Anders", "Sjöberg", , email = "anders.sjoberg@psychology.su.se", role = c("ths", "ctb")))
+    person("Erik", "Forsberg", , email= "forsbergpsychometrics@gmail.com", role = c("aut", "cre", "cph"),
+           comment = c(ORCID = "0000-0002-5228-9729"))
 Description: The 'D3mirt' package is used for identifying, estimating, and plotting descriptive multidimensional item response theory models, restricted to 3D and dichotomous or polytomous data that fit the two-parameter logistic model or the graded response model.
  The method is foremost explorative and centered around the plot function that exposes item characteristics and constructs, represented by vector arrows, located in a three-dimensional interactive space.
  The results can be useful for item-level analysis as well as test development.
